Custom post+image layout Update Unsplash post

--- a/_posts/2022-02-14-unsplash.markdown
+++ b/_posts/2022-02-14-unsplash.markdown
@@ -1,6 +1,7 @@
 ---
-layout: post
+layout: post+image
 title: Unsplash
+path_to_image: /assets/flower.jpg
 ---
 
 A couple of weeks ago I've submitted pictures I took to Unsplash for the first time.
