Update tagline Fix Unsplash post

--- a/_posts/2022-02-14-unsplash.markdown
+++ b/_posts/2022-02-14-unsplash.markdown
@@ -5,12 +5,21 @@ path_to_image: /assets/flower.jpg
 ---
 
 A couple of weeks ago I've submitted pictures I took to Unsplash for the first time.
-This was a fairly weird experience for me. Photography appears to be such a widespread hobby amongst programmers, that it feels almost too cliché to admit to it publicly. Getting into cameras seems to be just what you do, when you work in technology.
+This was a weird experience for me. Photography appears to be such a widespread hobby amongst programmers, that it feels almost too cliché to admit to it publicly. 
+Getting into cameras seems to be just what you do, when you work in technology.
 
-It was also a bit scary. While posting to social media always felt really low stakes, publishing you work on a dedicated photography platform like Unsplash felt intimidating.
+While posting to social media always felt low stakes, publishing you work on a dedicated photography platform like Unsplash felt intimidating.
 
-When choosing some of my first pictures, I realised, just how hard it is, to not be too critical with your own work. The first album I'm going through now contains all the pictures I took during a vacation to Israel. This was one of the most interesting experiences of my whole life, so it seemed like a good choice to start there. But is there anything interesting in there? I mean, most of the "tourist street photography style" pictures mainly make sense to me and a good chunk of the album are basically pictures I took for the sake of having a picture of what I saw during the trip. They are pretty recognisable by their poor composition, contrast and overall apparent lack of care. I just wanted a picture to remember that when I visited Masada, an ancient Roman fortress, there was a tiny model of the whole structure that had dollhouse-like mosaic floors.
+When choosing some of my first pictures I realised how hard it can be to not be too critical with your own work. 
+The first album I'm going through now contains all the pictures I took during a vacation to Israel. 
+This was one of the most interesting experiences of my whole life, so it seemed like a good choice to start there. 
+But is there anything interesting in there? 
+I mean, most of the "tourist street photography style" pictures mainly make sense to me and a good chunk of the album are basically pictures I took for the sake of having a picture of what I saw during the trip. 
+They are pretty recognisable by their poor composition, contrast and obvious lack of care. 
+I just wanted a picture to remember that when I visited Masada, an ancient Roman fortress, there was a tiny model of the whole structure that had dollhouse-like mosaic floors.
 
-But going through the album also made me realise that there was one motive that comes up quite a lot - Flowers. Everyone likes pictures of flowers. You can look through the profile pictures/home screens of the older part of your family and I bet that a lot of them will have picked flowers to put there.
+Going through the album made me realise that one motive came up again and again - **Flowers**.
 
-So that's where I started. I edited and upload a picture of an almond tree flower. It's a start and let's see where this goes.
+Everyone likes pictures of flowers. You can look through the profile pictures/home screens of the older part of your family and I bet that a lot of them will have picked flowers to put there. 
+That's where I started. 
+I edited and uploaded a picture of an almond tree flower. It's a start and let's see where this goes.
