✨ feat(cms): add featured image using cms

--- a/_posts/2022-02-14-unsplash.md
+++ b/_posts/2022-02-14-unsplash.md
@@ -1,7 +1,7 @@
 ---
 layout: post+image
 title: Unsplash
-path_to_image: /assets/flower.jpg
+path_to_image: /assets/2022-02-14-unsplash.jpeg
 ---
 
 A couple of weeks ago I've submitted pictures I took to Unsplash for the first time.
