✨ feat(assets,feed): add post image to feed

--- a/_posts/2022-02-14-unsplash.md
+++ b/_posts/2022-02-14-unsplash.md
@@ -2,7 +2,7 @@
 layout: post+image
 title: Unsplash
 date: 2022-02-14T20:00:59.356Z
-path_to_image: /assets/2022-02-14-unsplash.jpeg
+image: /assets/2022-02-14-unsplash.jpeg
 ---
 
 A couple of weeks ago I've submitted pictures I took to Unsplash for the first time.
