✨ fix assets, use proper schema for image objects and improve styling of post+image

--- a/_posts/2022-02-14-unsplash.md
+++ b/_posts/2022-02-14-unsplash.md
@@ -2,7 +2,11 @@
 layout: post+image
 title: Unsplash
 date: 2022-02-14T20:00:59.356Z
-image: /assets/2022-02-14-unsplash.jpeg
+image:
+  context: schema.org
+  type: ImageObject
+  author: <a href="//unsplash.com/@technocidal">Johannes Ebeling</a>
+  contentUrl: //images.unsplash.com/photo-1643747490734-f6bcaeeb12d9?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&h=960&q=80
 ---
 
 A couple of weeks ago I've submitted pictures I took to Unsplash for the first time.
